 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Imagen de fondo-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/feminismo">
    </ImageView>
    <!-- Icono de la app -->
    <ImageView
        android:src="@drawable/logof"
        android:id="@+id/imageView"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />

<!--Cuadro de registro de usuario,email y contraseña alineados-->

    <LinearLayout
        android:id="@+id/keysLayout"
        style="@style/AuthFieldContainer"
        android:layout_below="@id/imageView"
        android:layout_marginTop="20dp"
        android:alpha="0.9">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:hint="@string/username_hint"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp"
            tools:focusable="false">

            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:hint="@string/email_user_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp" />

    </LinearLayout>
    <!--Divisor de los botones-->
    <ImageView
        android:id="@+id/buttonDivider"
        style="@style/MYIV"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/button_divider" />
<!--Boton de de registrar-->
    <Button
        android:id="@+id/signupbutton"
        android:text="@string/signup_button_label"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/botones"
        android:textColor="@color/clarito"
        style="@style/ButtonStraight"/>
<!--Boton de cancelar-->
    <Button
        android:id="@+id/cancelbutton"
        android:text="@string/cancel_button_label"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/ButtonStraight"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/botones"
        android:textColor="@color/clarito" />

</RelativeLayout>
