<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Imagen de fondo-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/feminismo">

    </ImageView>

<!-- Logo de la app-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logof" />

<!-- Metemos los cuadros donde vamos a poner el usuario y contraseña alineados en el medio-->

    <LinearLayout
        android:id="@+id/keysLayout"
        style="@style/AuthFieldContainer"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imageView"
        android:alpha="0.9">


    <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />


            <EditText
                android:id="@+id/Contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contraseña"
                android:imeActionId="666"
                android:imeActionLabel="Custom"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                />


    </LinearLayout>

<!--Boton de inicio de sesion-->
    <Button
        android:id="@+id/loginbutton"
        android:text="@string/LoginButton_text"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_below="@id/keysLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/botones"
        android:textColor="@color/clarito" />

<!--Texto de registrarse-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_text"
        android:text="@string/signup_text"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        />

</RelativeLayout>